--- a/.gitignore
+++ b/.gitignore
@@ -80,7 +80,7 @@ typings/
 
 # Nuxt.js build / generate output
 .nuxt
-dist
+#dist
 
 # Gatsby files
 .cache/
@@ -107,7 +107,7 @@ dist
 
 .DS_Store
 node_modules
-/dist
+#/dist
 
 
 # local env files
