--- a/.github/workflows/starter.yaml
+++ b/.github/workflows/starter.yaml
@@ -23,3 +23,17 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
       - run: npm run build --if-present
+
+      - name: Verified commit
+        # You may pin to the exact commit or the version.
+        # uses: swinton/commit@bfa68d879ec57187f2c5bf616158433763f05f06
+        uses: swinton/commit@v2.0.0
+        with:
+          # Newline-separated list of files to be committed, relative to root of repository.
+          files: "/dist"
+          # Base directory containing files to be committed, defaults to the GitHub workspace directory path, $GITHUB_WORKSPACE.
+          
+          # Commit message to be used
+
+          commit-message: "Building For Production"
+          # Reference to be updated with commit. This reference must already exist. Defaults to the repository's default branch ref.
