--- a/.github/workflows/starter.yaml
+++ b/.github/workflows/starter.yaml
@@ -31,7 +31,8 @@ jobs:
         uses: swinton/commit@v2.0.0
         with:
           # Newline-separated list of files to be committed, relative to root of repository.
-          files: "/dist"
+          files: |
+            dist
           # Base directory containing files to be committed, defaults to the GitHub workspace directory path, $GITHUB_WORKSPACE.
           
           # Commit message to be used
